<resources>
    <string name="app_name">ವಚನ</string>
    <string name="activity_name_vachanakaras">ವಚನಕಾರರು</string>
    <string name="activity_name_vachanas">ವಚನಗಳು</string>
    <string name="search_title">ಹುಡುಕಿ</string>
    <string name="sort_title">ಮರುಜೋಡಿಸಿ</string>
    <string name="info_title">ಮಾಹಿತಿ</string>
    <string name="search_hint_vachanakaara">ಬಸವಣ್ಣ..</string>
    <string name="search_hint_vachana">ಕಳಬೇಡ ಕೊಲಬೇಡ..</string>
    <string name="search_info_vachanagaLu">ಕೆಳಕಂಡ ಪಟ್ಟಿ ಕೇವಲ \'%s\'-ಶಿವಶರಣರ ವಚನಗಳು ಮಾತ್ರ, ಬೇರಾವುದಾದರೂ ಅಲ್ಲವೇ ಬೇರೆ ಶಿವಶರಣರುಗಳ ವಚನ(ಗಳು) ಬೇಕೆಂದಿದ್ದಲ್ಲಿ \'ಹುಡುಕು\' ಸಂಜ್ಞೆಯನ್ನು ಒತ್ತಿ, ತಿಳಿದಿರುವಷ್ಟು ವಚನದ, ಅಲ್ಲವೇ ವಚನಕಾರರ ಹೆಸರಿನ ಅಲ್ಲವೇ ಅವರ ಅಂಕಿತನಾಮದ ಕುರುಹನ್ನು ಕನ್ನಡದಲ್ಲೇ ಬರೆಯಿರಿ</string>
    <string name="search_info_vachanakaararu">ಕೆಳಕಂಡ ಪಟ್ಟಿ ಬರೇ ವಚನಕಾರರುಗಳದ್ದು ಮಾತ್ರ, ಇಲ್ಲಿನ  \'ಹುಡುಕು\' ಸಂಜ್ಞೆ - ಬರೆದ ಅಕ್ಷರಗಳುಳ್ಳ ವಚನಕಾರರ(ರುಗಳ) ಹೆಸರಿಗೆ ಅಲ್ಲದೆ ಅಂಕಿತನಾಮಕ್ಕೆ ಒಪ್ಪವಾಗಿ ಅವರ(ರುಗಳ) ಬಗ್ಗೆ ಮಾಹಿತಿಯನ್ನು, ಹಾಗೂ ಅವರ(ರುಗಳ)ದ್ದಷ್ಟೇ ವಚನಗಳ ಪಟ್ಟಿಗೆ ಹೋಗಲು ಒದವಾಗುತ್ತದೆ.\n\nಅದಲ್ಲದೆ, ವಚನಕಾರರು ತಿಳಿಯದಿರುವ ಯಾವುದಾದರೂ ವಚನವನ್ನು ಹುಡುಕ ಬಯಸಿದ್ದಲ್ಲಿ ಕೆಳಕಂಡ ಯಾವುದೇ ವಚನಕಾರರನ್ನು ಒತ್ತಿ ಒಳಗೆ ಹೋಗಿ, ಅಲ್ಲಿ \'ಹುಡುಕು\' ಸಂಜ್ಞೆಯ ಜಾಡುಹಿಡಿದು, ಯಾವುದೇ ವಚನಕಾರರ ವಚನಗಳನ್ನು ಹುಡುಕಬಹುದು.</string>
    <string name="entry_launch_info">\nಇಂದಿನ ವಚನ \n\n %s \n\n</string>
    <string name="about_app">ಸುಮಾರು 200-ಕ್ಕೂ ಮೀರಿದ ವಚನಕಾರರುಗಳ ಸರಿಸುಮಾರು 20-ಸಾವಿರಕ್ಕೂ ಮೀರಿದ ವಚನಗಳುಳ್ಳ, ಯಾವುದೇ ವಚನಕಾರ ಅಲ್ಲವೇ ಅವರ ಅಂಕಿತನಾಮ ಅಲ್ಲವೇ ಅವರ ವಚನ(ಗಳ) ಕುರುಹು-ತುಣುಕುಗಳನ್ನು ಬರೆದು ಹೆಚ್ಚು ಮಾಹಿತಿ ಅಲ್ಲವೇ ಪೂರ್ಣ ವಚನವನ್ನು  ಸುಲಭವಾಗಿ ಹುಡುಕಲು ಒದಗಬಲ್ಲ ಬಳಕೆ ಇದು.\n\nವಚನದ(ಗಳ)ಲ್ಲಿನ ತಿಳಿಯದ ಪದಗಳ ಕಿರು-ಧಾತುವನ್ನು(ಪದದ ಮೊದಲ ಕೆಲವೇ ಕೆಲವು ಅಕ್ಷರಗಳನ್ನು) ಆರಿಸಿ(ಅಕ್ಷರಗಳ ಮೇಲೆ ಒತ್ತಿಹಿಡಿಯುವುದು ಅಲ್ಲವೇ ಎರಡು ಬಾರಿ ತಟ್ಟಿ) ಅದರ ಅರ್ಥವನ್ನು - \"ನಾನಾರ್ಥ\" ಆಯ್ಕೆಯನ್ನು ಆಯ್ದು - ಸುಲಭವಾಗಿ ತಿಳಿಯಬಹುದಾಗಿದೆ.\n\n</string>
    <string name="launch_ankura"> \n\n || ಓಂ || \n\n || ನಮಃ ಶಿವಾಯ || ನಮಃ ಗುರುಬಸವಲಿಂಗಾಯ || ನಮಃ ಗುರುಮಲ್ಲೇಶಾಯ|| </string>
    <string name="launch_mangaLa"> \n\n|| ಸರ್ವಂ ಇದಂ ಶಿವಸ್ಯ || ಸರ್ವಂ ಇದಂ ಲಿಂಗಸ್ಯ || ಸರ್ವಂ ಇದಂ ಜಂಗಮಸ್ಯ ||\n\n </string>
    <string name="enter">ಶರಣು ಬನ್ನಿ</string>
    <string name="meanings">ನಾನಾರ್ಥ</string>
    <string name="word">ಪದ ಹುಡುಕು..</string>
    <string name="word_warning">ಇದರ ಅರ್ಥ ತಿಳಿದಿಲ್ಲ, ಪದ ಆರಿಕೆಯನ್ನು ತುಂಡರಿಸಿ</string>
    <string name="details_pen_name">ಅಂಕಿತನಾಮ : %s</string>
    <string name="details_birth_time">ಹುಟ್ಟು : %s </string>
    <string name="details_place">ನೆಲೆ : %s </string>
    <string name="details_parents">ತಾಯಿತಂದೆಯಂದಿರು : %s </string>
    <string name="details_obtained">ದೊರಕಿರುವ ವಚನಗಳು : %s </string>
    <string name="details_more">ವಿವರ :  %s</string>
    <string name="sort_sub_menu_name">ಹೆಸರಿನಂತೆ</string>
    <string name="sort_sub_menu_numbers">ದೊರಕಿರುವ ವಚನಗಳ ಅಂಕಿಗಳಂತೆ</string>
    <string name="vachana_copied">ವಚನವನ್ನು ಮುಖ್ಯ ಕ್ಲಿಪ್ಬೋರ್ಡಿನಲ್ಲಿ ಉಳಿಸಿರಿಸಲಾಗಿದೆ</string>
    <string name="select_app">ಹಂಚಲು ಬಳಕೆಯನ್ನು ಆರಿಸಿ</string>
    <string name="warning_no_app">ವಚನ ಹಂಚಲು ಈ ಸಾಧನದಲ್ಲಿ ಯಾವುದೇ ಬಳಕೆಗಳಿಲ್ಲ</string>
    <string name="favorite">ನೆಚ್ಚಿನ ವಚನಗಳು</string>
    <string name="favorite_info">ಈ ಮೊದಲು ನೀವು ಮೆಚ್ಚಿದ</string>
</resources>
