<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/sort"
          android:title="@string/sort_title"
          android:icon="@drawable/sort"
          android:showAsAction="collapseActionView|ifRoom" >
        <menu>
            <item
                android:id="@+id/sort_by_name"
                android:menuCategory="container"
                android:orderInCategory="0"
                android:checked="true"
                android:checkable="true"
                android:title="@string/sort_sub_menu_name" />
            <item
                android:id="@+id/sort_by_numbers"
                android:menuCategory="container"
                android:checkable="true"
                android:orderInCategory="1"
                android:title="@string/sort_sub_menu_numbers" />
        </menu>
    </item>
    <item android:id="@+id/search"
          android:title="@string/search_title"
          android:icon="@drawable/search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/info"
          android:title="@string/info_title"
          android:icon="@drawable/info"
          android:showAsAction="collapseActionView|ifRoom" />
</menu>
