<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/launch_enter"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="5dp"
        android:minHeight="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:minWidth="100dp"
        android:text="@string/enter"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_above="@id/launch_enter"
        android:id="@+id/launch_mangala"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/launch_mangaLa"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/launch_ankura"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:textSize="14sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/launch_ankura"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:background="@drawable/item_bg"
        android:scrollbarStyle="outsideOverlay"
        android:layout_margin="10sp"
        android:padding="8dp"
        android:elevation="4dp"
        android:layout_below="@id/launch_ankura"
        android:layout_above="@id/launch_mangala"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="30dp"
            android:textStyle="normal"
            android:id="@+id/launch_text"
            android:lineSpacingExtra="3dp"
            android:text="@string/entry_launch_info"
            android:paddingBottom="80dp"/>
    </ScrollView>
</RelativeLayout>